[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/GestureInterface.gd" type="Script" id=1]
[ext_resource path="res://scenes/AttackDefenseButton.tscn" type="PackedScene" id=2]

[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.1, 0.1, 0.1 )

[sub_resource type="SpatialMaterial" id=2]
params_cull_mode = 2

[node name="GestureInterface" type="Spatial"]
script = ExtResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.107673, 1.42946 )
aabb = AABB( -1.30349, -0.677971, -0.0846459, 2.60698, 1.35594, 0.169292 )

[node name="Interface" type="Spatial" parent="."]

[node name="MeshInstance" type="MeshInstance" parent="Interface"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -1.55659 )
visible = false
mesh = SubResource( 1 )
material/0 = SubResource( 2 )

[node name="Buttons_Left" type="Spatial" parent="Interface"]
transform = Transform( 0.866025, 0, -0.5, 0, 1, 0, 0.5, 0, 0.866025, -0.25, -0.053, 0 )

[node name="Defense" parent="Interface/Buttons_Left" instance=ExtResource( 2 )]
transform = Transform( -0.0999986, 0.000527076, -2.30393e-11, 0, -4.37114e-09, -0.1, -0.000527076, -0.0999986, 4.37108e-09, 0, -0.174856, 0 )
is_attack = false

[node name="Attack" parent="Interface/Buttons_Left" instance=ExtResource( 2 )]
transform = Transform( -0.1, 2.98023e-08, -1.02445e-08, 0, -0.034202, -0.0939693, -3.35276e-08, -0.0939692, 0.034202, 0, 0.129662, -0.0643332 )

[node name="Buttons_Right" type="Spatial" parent="Interface"]
transform = Transform( 0.861221, 0, 0.50823, 0, 1, 0, -0.50823, 0, 0.861221, 0.25, -0.053, 0 )

[node name="Defense" parent="Interface/Buttons_Right" instance=ExtResource( 2 )]
transform = Transform( -0.0999986, 0.000527076, -2.30393e-11, 0, -4.37114e-09, -0.1, -0.000527076, -0.0999986, 4.37108e-09, 0, -0.174856, 0 )
is_attack = false

[node name="Attack" parent="Interface/Buttons_Right" instance=ExtResource( 2 )]
transform = Transform( -0.1, -3.35276e-08, 0, 1.11444e-08, -0.034202, -0.0939693, 4.47035e-08, -0.0939692, 0.034202, -7.45058e-08, 0.13086, -0.0610438 )
[connection signal="camera_entered" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_entered"]
[connection signal="camera_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_camera_exited"]
[connection signal="activated" from="Interface/Buttons_Left/Defense" to="." method="_on_Defense_activated"]
[connection signal="activated" from="Interface/Buttons_Left/Attack" to="." method="_on_Attack_activated"]
[connection signal="activated" from="Interface/Buttons_Right/Defense" to="." method="_on_Defense_activated"]
[connection signal="activated" from="Interface/Buttons_Right/Attack" to="." method="_on_Attack_activated"]
